update gen code
