# docs/admin/swagger.yaml
@@ -1178,6 +1178,8 @@ paths:
               type: object
         "500":
           description: Internal Server Error
+      security:
+      - AdminAuth: []
       summary: 向 gen_tables 表中导入数据表信息
       tags:
       - 系统管理--代码生成器
@@ -1206,6 +1208,8 @@ paths:
               type: object
         "500":
           description: Internal Server Error
+      security:
+      - AdminAuth: []
       summary: 删除代码生成配置表数据
       tags:
       - 系统管理--代码生成器
@@ -1234,6 +1238,8 @@ paths:
               type: object
         "500":
           description: Internal Server Error
+      security:
+      - AdminAuth: []
       summary: 生成代码文件
       tags:
       - 系统管理--代码生成器
@@ -1292,6 +1298,8 @@ paths:
               type: object
         "500":
           description: Internal Server Error
+      security:
+      - AdminAuth: []
       summary: 获取已导入的数据表列表
       tags:
       - 系统管理--代码生成器
@@ -1322,6 +1330,8 @@ paths:
               type: object
         "500":
           description: Internal Server Error
+      security:
+      - AdminAuth: []
       summary: 预览代码生成内容
       tags:
       - 系统管理--代码生成器
@@ -1380,6 +1390,8 @@ paths:
               type: object
         "500":
           description: Internal Server Error
+      security:
+      - AdminAuth: []
       summary: 获取数据库表名称列表
       tags:
       - 系统管理--代码生成器
@@ -1410,6 +1422,8 @@ paths:
               type: object
         "500":
           description: Internal Server Error
+      security:
+      - AdminAuth: []
       summary: 获取数据库表每个列的信息
       tags:
       - 系统管理--代码生成器
@@ -1438,6 +1452,8 @@ paths:
               type: object
         "500":
           description: Internal Server Error
+      security:
+      - AdminAuth: []
       summary: 删除代码生成配置表的行属性数据
       tags:
       - 系统管理--代码生成器
@@ -1461,6 +1477,8 @@ paths:
             $ref: '#/definitions/goal-app_pkg_render.JsonDataResp'
         "500":
           description: Internal Server Error
+      security:
+      - AdminAuth: []
       summary: 更新生成代码表列信息
       tags:
       - 系统管理--代码生成器
@@ -1489,6 +1507,8 @@ paths:
               type: object
         "500":
           description: Internal Server Error
+      security:
+      - AdminAuth: []
       summary: 更新代码生成配置表数据
       tags:
       - 系统管理--代码生成器
